--- a/T--Rio_UFRJ_Brazil--engineeringSuccess.html
+++ b/T--Rio_UFRJ_Brazil--engineeringSuccess.html
@@ -6,7 +6,8 @@
 
 		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--reset.css">
 		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--index.css" >
-		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--tabela">
+		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--tabela.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--Description.css">
 
 	</head>
 	<body class="body_index">
@@ -89,7 +90,7 @@
 					Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). <br>
 					Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). 
 				   
-					<img src="T--Rio_UFRJ_foto2Descricao.png" alt="" width="100%" height="50%">
+					<img src="T--Rio_UFRJ_Brazil--foto2Descricao.png" alt="" width="100%" height="50%">
 				   
 					Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). <br>
 					Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). <br>
@@ -99,15 +100,15 @@
                 <div class="linha">
                     <div class="coluna-50">
                         Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). 
-                        <img src="T--Rio_UFRJ_foto1Descricao.png" alt="" width="100%">
+                        <img src="T--Rio_UFRJ_Brazil--foto1Descricao.png" alt="" width="100%">
 
                     </div>
                     <div class="coluna-50">
-                        <img src="T--Rio_UFRJ_foto2Descricao.png" alt="" width="100%">
+                        <img src="T--Rio_UFRJ_Brazil--foto2Descricao.png" alt="" width="100%">
                         Estes erros de diagnósticos podem trazer consequências graves, uma vez que dificultam o tratamento direcionado ao paciente em questão e um melhor controle epidemiológico da doença (Muller, D. A., Depelsenaire, A. C. I., & Young, P. R. 2017).<br>
                         Estes erros de diagnósticos podem trazer consequências graves, uma vez que dificultam o tratamento direcionado ao paciente em questão e um melhor controle epidemiológico da doença (Muller, D. A., Depelsenaire, A. C. I., & Young, P. R. 2017).
                     </div>
-                        <div class="coluna-50"><img src="T--Rio_UFRJ_foto2Descricao.png" alt="" width="100%"></div>
+                        <div class="coluna-50"><img src="T--Rio_UFRJ_Brazil--foto2Descricao.png" alt="" width="100%"></div>
                         <div class="coluna-50"> 
                             Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). <br>
                             Os testes sorológicos são capazes de detectar os anticorpos produzidos por células de defesa após a infecção do vírus no organismo, principalmente as imunoglobulinas do tipo G (IgG) e M (IgM). Mas para vírus semelhantes como Dengue e Zika, a inespecificidade deste tipo de teste ocorre por causa de um fenômeno denominado reação cruzada (MONTECILLO-A. et al, 2019). <br> 
