--- a/T--Rio_UFRJ_Brazil--contribution.html
+++ b/T--Rio_UFRJ_Brazil--contribution.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--reset.css">
 		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--index.css" >
+		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--Description.css">
 
 	</head>
 	<body class="body_index">
