adicioandno o as paginas do site

--- a/T--Rio_UFRJ_Brazil--team.html
+++ b/T--Rio_UFRJ_Brazil--team.html
@@ -81,7 +81,7 @@
             <div>
                 <nav>
                     <div id="logomenu" >
-						<img id="imglogomenu" src="T--Rio_UFRJ_Brazil--logonav.png">
+						<img id="imglogomenu" src="https://2021.igem.org/wiki/images/5/50/T--Rio_UFRJ_Brazil--logonav.png">
 					</div>
 					<ul class="menu">		
 						<li><a href="T--Rio_UFRJ_Brazil--index.html"> &nbspHome&nbsp</a></li>
@@ -138,7 +138,7 @@
         <ul class="team">
             <li>
                 <a href="T--Rio_UFRJ_Brazil--isis2.html" target="janela">
-                    <img src="T--Rio_UFRJ_Brazil--rostoIsis.png" onmouseover="AbrirIsis()" >
+                    <img src="https://2021.igem.org/wiki/images/a/a5/T--Rio_UFRJ_Brazil--rostoIsis.png" onmouseover="AbrirIsis()" >
                 </a>
             </li>
             <li>
@@ -163,12 +163,12 @@
             </li>
             <li>
                 <a href="T--Rio_UFRJ_Brazil--andrelaine2.html" target="janela">
-                    <img src="T--Rio_UFRJ_Brazil--rostoAndrelaine.png" onmouseover="AbrirAndrelaine()" >
+                    <img src="https://2021.igem.org/File:T--Rio_UFRJ_Brazil--rostoAndrelaine.png" onmouseover="AbrirAndrelaine()" >
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_Brazil--juliano2.html" target="janela">
-                    <img src="T--Rio_UFRJ_Brazil--rostoJuliano.png" onmouseover="AbrirJuliano()">
+                    <img src="https://2021.igem.org/wiki/images/e/e5/T--Rio_UFRJ_Brazil--rostoJuliano.png" onmouseover="AbrirJuliano()">
                 </a>
             </li>
             <li>
@@ -178,7 +178,7 @@
             </li>
             <li>
                 <a href="T--Rio_UFRJ_Brazil--jamy2.html" target="janela">
-                    <img src="T--Rio_UFRJ_Brazil--rostoJamy.png" onmouseover="AbrirJamy()" >
+                    <img src="https://2021.igem.org/wiki/images/d/d5/T--Rio_UFRJ_Brazil--rostoJamy.png" onmouseover="AbrirJamy()" >
                 </a>
             </li>
         </ul>
