--- a/T--Rio_UFRJ_Brazil--vivian.html
+++ b/T--Rio_UFRJ_Brazil--vivian.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 
-        <img src="T--Rio_UFRJ_Brazil--vivianInicial.png">
+        <img src="https://2021.igem.org/wiki/images/2/23/T--Rio_UFRJ_Brazil--VivianInicial.png">
 
     </body>
 
