--- a/T--Rio_UFRJ_Brazil--vivian2.html
+++ b/T--Rio_UFRJ_Brazil--vivian2.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 
-        <img src="T--Rio_UFRJ_Brazil--vivianSelecao.png">
+        <img src="https://2021.igem.org/wiki/images/b/b4/T--Rio_UFRJ_Brazil--Vivian_Selecao.png">
 		<map name="image_map">
 			<area alt="" title="Function" href="#" coords="158,134,50" shape="circle">
 			<area alt="" title="Biological Part" href="#" coords="159,248,50" shape="circle">
