--- a/T--Rio_UFRJ_Brazil--UFRJ_index.html
+++ b/T--Rio_UFRJ_Brazil--UFRJ_index.html
@@ -15,7 +15,7 @@
 			<div class="caixa">
 				<nav>
 					<div id="logomenu" >
-						<img id="imglogomenu" src="T--Rio_UFRJ_Brazil--logonav.png">
+						<img id="imglogomenu" src="https://2021.igem.org/wiki/images/5/50/T--Rio_UFRJ_Brazil--logonav.png">
 					</div>
 					<ul class="menu">		
 						<li><a href="T--Rio_UFRJ_Brazil--index.html"> &nbspHome&nbsp</a></li>
@@ -80,7 +80,7 @@
 		<main>
 			<div class="desenvolv1">
 				
-				<img src="T--Rio_UFRJ_Brazil--Home_video.gif" id="video" >
+				<img src="https://2021.igem.org/wiki/images/5/52/T--Rio_UFRJ_Brazil--Home_video.gif" id="video" >
 			</div>
 			<div>
 				<img src="T--Rio_UFRJ_Brazil--mosquito.gif" id="video">
